@@ -27,9 +27,10 @@ Standards-Version: 3.7.2
 
 Package: gdm
 Architecture: any
-Depends: adduser,
+Depends: ${shlibs:Depends},
+         ${misc:Depends},
+         adduser,
          debconf (>= 0.5) | debconf-2.0,
-         ${shlibs:Depends},
          libpam-modules (>= 0.72-1),
          libpam-runtime (>= 0.76-13.1),
          gnome-session | xterm | x-window-manager | x-terminal-emulator,
