@@ -37,8 +37,9 @@ gdm (2.16.4-2) UNRELEASED; urgency=low
   * Pass --disable-scrollkeeper to configure.
   * Factorize manpages generation.
   * Rename various debian/* files to debian/gdm.*.
+  * Add ${misc:Depends}.
 
- -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 14:57:52 +0200
+ -- Loic Minier <lool@dooz.org>  Tue, 01 May 2007 15:08:38 +0200
 
 gdm (2.16.4-1.1) unstable; urgency=low
 
